--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dev_dependencies:
   email_validator: ^2.0.1
   dio: ^4.0.0
   http: ^0.13.3
-  image_picker: ^0.8.2
+  image_picker: ^0.8.1+3
+  image_cropper: ^1.4.1
 
 
 # For information on the generic Dart part of this file, see the
