--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dev_dependencies:
   http: ^0.13.3
   image_picker: ^0.8.1+3
   image_cropper: ^1.4.1
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
+
 
 
 # For information on the generic Dart part of this file, see the
