--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dev_dependencies:
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   fluttertoast: ^8.0.7
+  cloud_firestore: ^2.4.0
+  firebase: ^9.0.1
 
 
 
