--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.6
-
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
   email_validator: ^2.0.1
   dio: ^4.0.0
   http: ^0.13.3
@@ -41,9 +30,21 @@ dev_dependencies:
   image_cropper: ^1.4.1
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
-  fluttertoast: ^8.0.7
+#  fluttertoast: ^8.0.8
   cloud_firestore: ^2.4.0
   firebase: ^9.0.1
+  shared_preferences: ^2.0.6
+
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
+
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
 
 
 
