--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   cloud_firestore: ^2.4.0
   firebase: ^9.0.1
   shared_preferences: ^2.0.6
+  flutter_html: ^2.1.1
+  flutter_svg: ^0.22.0
+  animated_text_kit: ^4.2.1
+#  connectivity: ^3.0.6
+  google_fonts: ^2.1.0
+  url_launcher: ^6.0.9
+  flutter_native_splash: ^1.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
